ci: fix ci rust version (#677)
* ci: fix ci rust version

--- a/.github/actions/setup-builder/action.yaml
+++ b/.github/actions/setup-builder/action.yaml
@@ -33,5 +33,6 @@ runs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly-2024-11-08
+        default: true
     - name: Configure rust runtime env
       uses: ./.github/actions/setup-rust-runtime
