--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,9 @@ rand = "0.8.5"
 clap-cargo = "0.14.1"
 clap = { version = "4.4.7", features = ["derive"] }
 
+## unit test framework
+mockall = "0.13.1"
+
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
@@ -120,7 +123,6 @@ metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
-
 
 [profile.dev]
 overflow-checks = false
