--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -46,3 +46,6 @@ journal-server.workspace = true
 cli-command.workspace = true
 clap-cargo.workspace = true
 protocol.workspace = true
+
+[dev-dependencies]
+mockall.workspace = true
