feat: record, read slow sub and test

--- a/config/placement-center.toml
+++ b/config/placement-center.toml
@@ -42,4 +42,4 @@ max_open_files = 10000
 
 [log]
 log_config = "./config/log4rs.yaml"
-log_path = "/tmp/robust/placement-center/logs"
+log_path = "./logs/placement-center"
