--- a/config/log-config/mqtt-log4rs.yaml
+++ b/config/log-config/mqtt-log4rs.yaml
@@ -16,24 +16,48 @@ appenders:
   stdout:
     kind: console
     encoder:
-        pattern: "{d(%Y-%m-%d %H:%M:%S)} {f}-{L} {h({l})} {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S)} {f}-{L} {h({l})} {m}{n}"
 
   server:
     kind: rolling_file
     path: "{$path}/server.log"
     encoder:
-        pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
     policy:
-        trigger:
-            kind: size
-            limit: 1 gb
-        roller:
-            kind: fixed_window
-            pattern: "{$path}/server-{}.log"
-            base: 0
-            count: 50
+      trigger:
+        kind: size
+        limit: 1 gb
+      roller:
+        kind: fixed_window
+        pattern: "{$path}/server-{}.log"
+        base: 0
+        count: 50
+
+  slow_sub:
+    kind: rolling_file
+    path: "{$path}/slow_sub.log"
+    encoder:
+      pattern: "{m}{n}"
+    policy:
+      trigger:
+        kind: size
+        limit: 1 gb
+      roller:
+        kind: fixed_window
+        pattern: "{$path}/slow_sub-{}.log"
+        base: 0
+        count: 50
+
 root:
   level: info
   appenders:
     - stdout
     - server
+
+
+loggers:
+  mqtt-broker::observability:
+    level: info
+    appenders:
+      - slow_sub
+    additive: false
