--- a/example/mqtt-cluster/mqtt-server/node-2.toml
+++ b/example/mqtt-cluster/mqtt-server/node-2.toml
@@ -55,6 +55,5 @@ default_password = "pwd123"
 storage_type = "memory"
 
 [log]
-log_config = "./config/log4rs.yaml"
-log_path = "/tmp/robust/mqtt-broker-2/logs"
-
+log_config = "./config/log-config/mqtt-log4rs.yaml"
+log_path = "./logs/mqtt-broker-2/logs"
