--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -12,28 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cluster_name = "placement-test"
-
-[node]
-node_id = 1
-# nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
-nodes = { 1 = "127.0.0.1:1228"}
-
-[network]
-grpc_port = 1228
-http_port = 1227
-
-[system]
-runtime_work_threads = 100
-
-[heartbeat]
-heartbeat_timeout_ms = 5000
-heartbeat_check_time_ms = 1000
-
-[rocksdb]
-data_path = "/tmp/robust-test/placement-center-1/data"
-max_open_files = 10000
-
-[log]
-log_config = "./config/log4rs.yaml"
-log_path = "./logs/placement-center-1/logs"
+[toolchain]
+channel = "nightly-2024-11-08"
+components = [ "rustfmt", "rust-src", "miri", "rust-analyzer"]
