feat: list slow sub feat

--- a/_typos.toml
+++ b/_typos.toml
@@ -21,6 +21,7 @@
 Identifer = "Identifer"
 
 # Ignore the unsubscribe term as it's used in the MQTT context.
+# todo fix spelling error
 UNSUBSCRIBE = "UNSUBSCRIBE"
 unsubscrible = "unsubscrible"
 SUBSCRIBLE = "SUBSCRIBLE"
