--- a/deny.toml
+++ b/deny.toml
@@ -114,6 +114,7 @@ allow = [
     "EPL-2.0",
     "OpenSSL",
     "EPL-1.0",
+    "Unicode-3.0",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
