--- a/.github/actions/build-linux-artifacts/action.yml
+++ b/.github/actions/build-linux-artifacts/action.yml
@@ -51,7 +51,7 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: sqlness-logs
-        path: /tmp/robust-*.log
+        path: ./robust-data-*.log
         retention-days: 3
 
     - name: Build standard robust
