--- a/.github/actions/build-macos-artifacts/action.yml
+++ b/.github/actions/build-macos-artifacts/action.yml
@@ -84,7 +84,7 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: sqlness-logs
-        path: /tmp/robust-*.log
+        path: ./robust-data-*.log
         retention-days: 3
 
     - name: Build robust binary
