--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -56,4 +56,4 @@ storage_type = "memory"
 
 [log]
 log_config = "./config/log4rs.yaml"
-log_path = "/tmp/robust/mqtt-broker/logs"
+log_path = "./robust-data/mqtt-broker/logs"
