feat: subscribe support queue mode (#702)
* feat: subscribe support queue mode

* feat: change share subscribe group_name

* feat: add test for queue share and change data path

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,8 @@ build
 .DS_Store
 log/*
 src/rlog/log/server.log
-.idea/.gitignore
-.idea/modules.xml
-.idea/robustmq.iml
-.idea/vcs.xml
-.idea/workspace.xml
 logs
 nohup.out
-.idea/checkstyle-idea.xml
-.idea/misc.xml
-.idea/codeStyles/Project.xml
-.idea/codeStyles/codeStyleConfig.xml
+.idea
 /precommit_venv/
+robust-data*
