--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -12,9 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Run Cargo Test （exclude integration test modules）
-cargo nextest run --profile=ci --workspace --exclude=robustmq-test --exclude=grpc-clients
+[profile.default]
+slow-timeout="1m"
 
- # Modules that are not suitable for unit testing
- # grpc-clients
- # robustmq-test
+[profile.ci]
+slow-timeout = { period = "60s", terminate-after = 3, grace-period = "10s" }
+
+[profile.ci.junit]
+path = 'junit.xml'
