--- a/src/cli-command/Cargo.toml
+++ b/src/cli-command/Cargo.toml
@@ -28,3 +28,4 @@ common-base.workspace = true
 metadata-struct.workspace = true
 protocol.workspace = true
 serde_json.workspace = true
+prettytable-rs.workspace = true
