--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -55,5 +55,5 @@ default_password = "pwd123"
 storage_type = "memory"
 
 [log]
-log_config = "./config/log4rs.yaml"
+log_config = "./config/log-config/mqtt-log4rs.yaml"
 log_path = "./robust-data/mqtt-broker/logs"
