--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -12,20 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[default.extend-identifiers-re]
-
-
-[default.extend-words]
-# This words is a spelling error for paho-mqtt package.
-# we need to ignore it.
-Identifer = "Identifer"
-
-# Ignore the unsubscribe term as it's used in the MQTT context.
-# todo fix spelling error
-UNSUBSCRIBE = "UNSUBSCRIBE"
-unsubscrible = "unsubscrible"
-SUBSCRIBLE = "SUBSCRIBLE"
-
-
-[files]
-extend-exclude = []
+[toolchain]
+channel = "nightly-2024-11-08"
+components = [ "rustfmt", "rust-src", "miri", "rust-analyzer"]
