--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ futures = "0.3"
 thiserror = "1"
 bytes = { version = "1", features = ["serde"] }
 futures-util = "0.3.30"
-rocksdb = "0.22.0"
+rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 tonic = "0.11.0"
 tonic-build = "0.11.0"
 bincode = "1.3.3"
