--- a/src/common/rocksdb-engine/Cargo.toml
+++ b/src/common/rocksdb-engine/Cargo.toml
@@ -26,6 +26,7 @@ common-base.workspace = true
 log.workspace = true
 rocksdb.workspace = true
 dashmap.workspace = true
+futures.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
