--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -51,6 +51,11 @@ runtime_worker_threads = 128
 default_user = "admin"
 default_password = "pwd123"
 
+[offline_messages]
+enable = true
+expire_ms = 3600
+max_messages_num = 1000
+
 [storage]
 storage_type = "memory"
 
