--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,8 +54,6 @@ tokio-rustls = "0.26"
 axum = { version = "0.7.2", features = ["ws"] }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
-## storage lib
-rocksdb = "0.22.0"
 mysql = "*"
 ## serde lib
 serde = { version = "1.0", features = ["derive"] }
@@ -83,6 +81,7 @@ lazy_static = "^1.4"
 thiserror = "1"
 bytes = { version = "1", features = ["serde"] }
 futures-util = "0.3.30"
+rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 tonic = "0.11.0"
 tonic-build = "0.11.0"
 bincode = "1.3.3"
