ci: add test ci timeout feat

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -34,6 +34,7 @@ jobs:
   linux-tests:
     name: unit test
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     container:
       image: amd64/rust
     steps:
