--- a/.github/workflows/mqtt-ig-test.yml
+++ b/.github/workflows/mqtt-ig-test.yml
@@ -35,6 +35,7 @@ jobs:
   linux-tests:
     name: cargo test
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     container:
       image: amd64/rust
     steps:
