--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 [workspace]
+name = "robustmq"
 members = [
     "src/mqtt-bridge/kafka",
     "src/mqtt-bridge/elasticsearch",
