--- a/example/test-network-k8s/kube/placement-center.yaml
+++ b/example/test-network-k8s/kube/placement-center.yaml
@@ -56,11 +56,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: pc
+      app: placement-center
   template:
     metadata:
       labels:
-        app: pc
+        app: placement-center
     spec:
       containers:
         - name: placement-center
