--- a/example/test-network-k8s/kube/ingress-nginx-robustmq-kind.yaml
+++ b/example/test-network-k8s/kube/ingress-nginx-robustmq-kind.yaml
@@ -395,7 +395,7 @@ spec:
     app.kubernetes.io/component: controller
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
-  type: LoadBalancer
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
