--- a/example/test-network-docker/compose/config/cluster/placement-center/node-1.toml
+++ b/example/test-network-docker/compose/config/cluster/placement-center/node-1.toml
@@ -16,9 +16,7 @@ cluster_name = "placement-test"
 
 [node]
 node_id = 1
-# nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
-# nodes = { 1 = "placement-center-node-1:1228", 2 = "placement-center-node-2:2228", 3 = "placement-center-node-3:3228" }
-nodes = { 1 = "placement-center-node-1:1228"}
+nodes = { 1 = "placement-center-node-1:1228", 2 = "placement-center-node-2:2228", 3 = "placement-center-node-3:3228" }
 [network]
 grpc_port = 1228
 http_port = 1227
