--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,6 +14,7 @@
 
 ---
 name: Bug report
+title: "[BUG]"
 description: Is something not working? Help us fix it!
 labels: [ "bug" ]
 body:
@@ -100,3 +101,14 @@ body:
         trace. This will be automatically formatted into code, so no
         need for backticks.
       render: bash
+
+  - type: checkboxes
+    attributes:
+      label: Are you willing to submit PR?
+      description: >
+        A pull request is optional, but we are glad to help you in the contribution process
+        especially if you already know a good understanding of how to implement the fix.
+        RobustMQ is a community-driven project and we love to bring new contributors in.
+      options:
+        - label: Yes. I would be willing to submit a PR with guidance from the RobustMQ community to improve.
+        - label: No. I cannot submit a PR at this time.
