--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -14,6 +14,7 @@
 
 ---
 name: Enhancement
+title: "[Style/Refactor/Performance/Doc/Test/Build/CI/Chore]"
 description: Suggest an enhancement to existing functionality
 labels: [ "enhancement" ]
 body:
@@ -23,13 +24,14 @@ body:
       label: What type of enhancement is this?
       multiple: true
       options:
-        - API improvement
-        - Configuration
-        - Performance
+        - Style
         - Refactor
-        - Tech debt reduction
-        - User experience
-        - Other
+        - Performance
+        - Doc
+        - Test
+        - Build
+        - CI
+        - Chore
     validations:
       required: true
 
