--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -18,8 +18,18 @@ title: "[Feat]"
 description: Suggest a new feature for RobustMQ
 labels: [ "feature request" ]
 body:
+  - type: checkboxes
+    attributes:
+      label: Have you checked the documentation for submitting an Issue?
+      description: >
+        We would appreciate it if you could first check [Contribution Guide](https://robustmq.com/ContributionGuide/GitHub-Contribution-Guide.html),
+        as this will help us quickly categorize the Issue.
+        RobustMQ is a community-driven project and we love to bring new contributors in.
+      options:
+        - label: Yes.
+          required: true
+
   - type: markdown
-    id: info
     attributes:
       value: |
         Only use this template to suggest a new feature that doesn't already exist in RobustMQ.
@@ -30,7 +40,7 @@ body:
     id: what
     attributes:
       label: What problem does the new feature solve?
-      description: |
+      description: >
         Describe the problem and why it is important to solve. Did you consider alternative
         solutions, perhaps outside the database? Why is it better to add the feature to
         RobustMQ?
@@ -41,7 +51,7 @@ body:
     id: how
     attributes:
       label: What does the feature do?
-      description: |
+      description: >
         Give a high-level overview of what the feature does and how it would work.
     validations:
      required: true
@@ -50,7 +60,7 @@ body:
     id: implementation
     attributes:
       label: Implementation challenges
-      description: |
+      description: >
         If you have ideas of how to implement the feature, and any particularly
         challenging issues to overcome, then provide them here.
     validations:
