--- a/.github/ISSUE_TEMPLATE/subtask.yml
+++ b/.github/ISSUE_TEMPLATE/subtask.yml
@@ -13,10 +13,9 @@
 # limitations under the License.
 
 ---
-name: Feature request
-title: "[Feat]"
-description: Suggest a new feature for RobustMQ
-labels: [ "feature request" ]
+name: Subtask
+title: "[RPIP-*/MINOR][Style/Refactor/Performance/Docs/Test/Build/CI/Chore][Subtask]"
+description: A subtask issue
 body:
   - type: checkboxes
     attributes:
@@ -29,50 +28,42 @@ body:
         - label: Yes.
           required: true
 
-  - type: markdown
+  - type: checkboxes
     attributes:
-      value: |
-        Only use this template to suggest a new feature that doesn't already exist in RobustMQ.
-        For enhancements to existing features, use the "Enhancement" issue template. For bugs,
-        use the bug report template.
+      label: Search before asking
+      options:
+        - label: >
+            I have searched in the [issues](https://github.com/robustmq/robustmq/issues) and found no similar
+            issues.
+          required: true
 
   - type: textarea
-    id: what
     attributes:
-      label: What problem does the new feature solve?
-      description: >
-        Describe the problem and why it is important to solve. Did you consider alternative
-        solutions, perhaps outside the database? Why is it better to add the feature to
-        RobustMQ?
+      label: Describe the subtask
+      placeholder: >
+        Please describe the content of the subtask clearly and concisely.
     validations:
       required: true
 
   - type: textarea
-    id: how
     attributes:
-      label: What does the feature do?
-      description: >
-        Give a high-level overview of what the feature does and how it would work.
+      label: Parent issue
+      placeholder: >
+        Please put the parent issue link here.
     validations:
-     required: true
-
-  - type: textarea
-    id: implementation
-    attributes:
-      label: Implementation challenges
-      description: >
-        If you have ideas of how to implement the feature, and any particularly
-        challenging issues to overcome, then provide them here.
-    validations:
-      required: false
+      required: true
 
   - type: checkboxes
     attributes:
       label: Are you willing to submit PR?
       description: >
         A pull request is optional, but we are glad to help you in the contribution process
-        especially if you already know a good understanding of how to implement the feature.
+        especially if you already have a grip on how to implement the new feature.
         RobustMQ is a community-driven project and we love to bring new contributors in.
       options:
         - label: Yes. I would be willing to submit a PR with guidance from the RobustMQ community to improve.
         - label: No. I cannot submit a PR at this time.
+
+  - type: markdown
+    attributes:
+      value: "Thanks for taking the time to propose an subtask issue!"
