Change rust toolchain version from nightly to stable

--- a/.github/actions/setup-builder/action.yaml
+++ b/.github/actions/setup-builder/action.yaml
@@ -32,7 +32,7 @@ runs:
         apt-get install -y cmake
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: nightly-2024-11-08
+        toolchain: stable
         default: true
     - name: configure cargo cache
       uses: actions/cache@v4
