--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -12,5 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+edition = "2024"
 group_imports = "StdExternalCrate"
 imports_granularity = "Module"
