Change text maching in customLabels

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -20,27 +20,27 @@ caseSensitive: true
 # Array of labels to be applied to the PR [default: []]
 customLabels:
   # Finds the `text` within the PR title and body and applies the `label`
-  - text: '#feat'
+  - text: 'feat:'
     label: 'feature'
-  - text: '#fix'
+  - text: 'fix:'
     label: 'fix'
-  - text: '#test'
+  - text: 'test:'
     label: 'test'
-  - text: '#refactor'
+  - text: 'refactor:'
     label: 'refactor'
-  - text: '#chore'
+  - text: 'chore:'
     label: 'chore'
-  - text: '#docs'
+  - text: 'docs:'
     label: 'docs'
-  - text: '#style'
+  - text: 'style:'
     label: 'style'
-  - text: '#perf'
+  - text: 'perf:'
     label: 'performance'
-  - text: '#ci'
+  - text: 'ci:'
     label: 'ci'
-  - text: '#build'
+  - text: 'build:'
     label: 'build'
-  - text: '#revert'
+  - text: 'revert:'
     label: 'revert'
 # Search the body of the PR for the `text` [default: true]
 searchBody: true
