--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -14,4 +14,7 @@
 
 [toolchain]
 channel = "stable"
-components = [ "rustfmt", "rust-src", "miri", "rust-analyzer"]
+components = [ "rustfmt", "rust-src", "rust-analyzer"]
+# The component named miri is supported in the nightly version
+# so we will use it until the stable version can be supported.
+# components = [ "rustfmt", "rust-src", "miri", "rust-analyzer"]
