--- a/example/mqtt-cluster/mqtt-server/node-2.toml
+++ b/example/mqtt-cluster/mqtt-server/node-2.toml
@@ -19,6 +19,7 @@ http_port = 29982
 placement_center = ["127.0.0.1:1228","127.0.0.1:2228","127.0.0.1:3228"]
 
 [network]
+local_ip = "127.0.0.1"
 tcp_port = 21883
 tcps_port = 28883
 websocket_port = 28093
