--- a/example/mqtt-cluster/journal-server/node-1.toml
+++ b/example/mqtt-cluster/journal-server/node-1.toml
@@ -17,6 +17,7 @@ node_id = 1
 placement_center = ["127.0.0.1:1228"]
 
 [network]
+local_ip = "127.0.0.1"
 grpc_port = 2228
 tcp_port = 3110
 tcps_port = 3111
