--- a/example/mqtt-cluster/mqtt-server/node-3.toml
+++ b/example/mqtt-cluster/mqtt-server/node-3.toml
@@ -19,6 +19,7 @@ http_port = 39982
 placement_center = ["127.0.0.1:1228","127.0.0.1:2228","127.0.0.1:3228"]
 
 [network]
+local_ip = "127.0.0.1"
 tcp_port = 31883
 tcps_port = 38883
 websocket_port = 38093
