--- a/example/mqtt-cluster/placement-center/node-2.toml
+++ b/example/mqtt-cluster/placement-center/node-2.toml
@@ -19,6 +19,7 @@ node_id = 2
 nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
 
 [network]
+local_ip = "127.0.0.1"
 grpc_port = 2228
 http_port = 2227
 
