finish auto labeling for PR and issues

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -16,7 +16,7 @@
 name: Feature request
 title: "[Feat]"
 description: Suggest a new feature for RobustMQ
-labels: [ "feature request" ]
+labels: [ "kind:feat" ]
 body:
   - type: checkboxes
     attributes:
