feat: add pub & sub to cli-command

--- a/src/cli-command/Cargo.toml
+++ b/src/cli-command/Cargo.toml
@@ -29,3 +29,5 @@ metadata-struct.workspace = true
 protocol.workspace = true
 serde_json.workspace = true
 prettytable-rs.workspace = true
+tokio.workspace = true
+paho-mqtt.workspace = true
