--- a/example/mqtt-cluster/mqtt-server/node-1.toml
+++ b/example/mqtt-cluster/mqtt-server/node-1.toml
@@ -16,7 +16,7 @@ cluster_name = "mqtt-broker"
 broker_id = 1
 grpc_port = 9981
 http_port = 9982
-placement_center = ["127.0.0.1:1228"]
+placement_center = ["127.0.0.1:1228","127.0.0.1:2228","127.0.0.1:3228"]
 
 [network]
 local_ip = "127.0.0.1"
