--- a/example/test-network-docker/compose/compose-test-net.yaml
+++ b/example/test-network-docker/compose/compose-test-net.yaml
@@ -15,10 +15,10 @@
 version: '3.7'
 
 volumes:
-  journal-server-node-1-data:
+  # journal-server-node-1-data:
   mqtt-server-node-1-data:
-  mqtt-server-node-2-data:
-  mqtt-server-node-3-data:
+  # mqtt-server-node-2-data:
+  # mqtt-server-node-3-data:
   placement-center-node-1-data:
   placement-center-node-2-data:
   placement-center-node-3-data:
@@ -79,31 +79,32 @@ services:
     ports:
       - 9981:9981
       - 9982:9982
+      - 1883:1883
     networks:
       - test-network
 
-  mqtt-server-node-2:
-    image: mqtt-server-test:0.1
-    container_name: mqtt-server-node-2
-    working_dir: /robustmq
-    volumes:
-      - ./config/cluster/mqtt-server/node-2.toml:/robustmq/config/cluster/mqtt-server/node.toml
-      - mqtt-server-node-2-data:/robustmq/robust-data-test
-    ports:
-      - 29981:29981
-      - 29982:29982
-    networks:
-      - test-network
+  # mqtt-server-node-2:
+  #   image: mqtt-server-test:0.2
+  #   container_name: mqtt-server-node-2
+  #   working_dir: /robustmq
+  #   volumes:
+  #     - ./config/cluster/mqtt-server/node-2.toml:/robustmq/config/cluster/mqtt-server/node.toml
+  #     - mqtt-server-node-2-data:/robustmq/robust-data-test
+  #   ports:
+  #     - 29981:29981
+  #     - 29982:29982
+  #   networks:
+  #     - test-network
 
-  mqtt-server-node-3:
-    image: mqtt-server-test:0.1
-    container_name: mqtt-server-node-3
-    working_dir: /robustmq
-    volumes:
-      - ./config/cluster/mqtt-server/node-3.toml:/robustmq/config/cluster/mqtt-server/node.toml
-      - mqtt-server-node-3-data:/robustmq/robust-data-test
-    ports:
-      - 39981:39981
-      - 39982:39982
-    networks:
-      - test-network
+  # mqtt-server-node-3:
+  #   image: mqtt-server-test:0.2
+  #   container_name: mqtt-server-node-3
+  #   working_dir: /robustmq
+  #   volumes:
+  #     - ./config/cluster/mqtt-server/node-3.toml:/robustmq/config/cluster/mqtt-server/node.toml
+  #     - mqtt-server-node-3-data:/robustmq/robust-data-test
+  #   ports:
+  #     - 39981:39981
+  #     - 39982:39982
+  #   networks:
+  #     - test-network
