--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,36 +53,13 @@ repos:
         language: rust
         files: \.rs$
         args: []
-      - id: cargo-fmt
-        name: cargo fmt
-        description: Format files with rustfmt.
-        entry: bash -c 'cargo fmt -- --check'
-        language: system
-        pass_filenames: true
-        files: \.rs$
-        args: []
-      - id: hawkeye-fmt-check-auto
+      - id: hawkeye-fmt-auto
         name: hawkeye fmt auto
         description: Format files with hawkeye automatically.
         entry: bash -c 'hawkeye format'
         language: system
         pass_filenames: true
         files: \.*$
-        args: []
-      - id: hawkeye-fmt-check
-        name: hawkeye fmt check
-        description: Check files with hawkeye.
-        entry: bash -c 'hawkeye check'
-        language: rust
-        files: \.*$
-        args: []
-      - id: cargo-deny
-        name: cargo deny check
-        description: Check cargo dependencies
-        # we only check licenses
-        entry: bash -c 'cargo deny check licenses'
-        language: system
-        files: \.rs$
         args: []
       - id: typos
         name: typos
@@ -92,13 +69,46 @@ repos:
         files: \.*$
         pass_filenames: false
       - id: cargo-check
+        stages:
+          - pre-commit
         name: cargo check
         description: Check the package for errors.
         entry: bash -c 'cargo check --all'
         language: system
         files: \.rs$
         pass_filenames: false
+      - id: hawkeye-fmt-check
+        stages:
+          - pre-push
+        name: hawkeye fmt check
+        description: Check files with hawkeye.
+        entry: bash -c 'hawkeye check'
+        language: rust
+        files: \.*$
+        args: []
+      - id: cargo-fmt-check
+        stages:
+          - pre-push
+        name: cargo fmt
+        description: Format files with rustfmt.
+        entry: bash -c 'cargo fmt -- --check'
+        language: system
+        pass_filenames: true
+        files: \.rs$
+        args: [ ]
+      - id: cargo-deny
+        stages:
+          - pre-push
+        name: cargo deny check
+        description: Check cargo dependencies
+        # we only check licenses
+        entry: bash -c 'cargo deny check licenses'
+        language: system
+        files: \.rs$
+        args: []
       - id: cargo-clippy
+        stages:
+          - pre-push
         name: cargo clippy
         description: Lint rust sources
         entry: bash -c 'cargo clippy --all-targets --all-features --tests --benches -- -D warnings'
@@ -106,6 +116,8 @@ repos:
         files: \.rs$
         pass_filenames: false
       - id: cargo-test
+        stages:
+          - pre-push
         name: cargo test
         description: unit test for the project
         entry: bash -c 'make test'
