--- a/example/mqtt-cluster/placement-center/node-1.toml
+++ b/example/mqtt-cluster/placement-center/node-1.toml
@@ -28,7 +28,7 @@ http_port = 1227
 runtime_work_threads = 100
 
 [heartbeat]
-heartbeat_timeout_ms = 100000000
+heartbeat_timeout_ms = 10000
 heartbeat_check_time_ms = 1000
 
 [rocksdb]
