--- a/example/mqtt-cluster/placement-center/node-2.toml
+++ b/example/mqtt-cluster/placement-center/node-2.toml
@@ -27,7 +27,7 @@ http_port = 2227
 runtime_work_threads = 100
 
 [heartbeat]
-heartbeat_timeout_ms = 100000000
+heartbeat_timeout_ms = 5000
 heartbeat_check_time_ms = 1000
 
 [rocksdb]
