--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,10 +84,13 @@ thiserror = "1"
 bytes = { version = "1", features = ["serde"] }
 futures-util = "0.3.30"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
-tonic = "0.11.0"
-tonic-build = "0.11.0"
+tonic = "0.12.3"
+tonic-build = "0.12.3"
 bincode = "1.3.3"
-prost = "0.12.3"
+prost = "0.13.2"
+prost-build = "0.13.2"
+prost-validate = {version = "0.2.6", features=["derive"]}
+prost-validate-build = "0.2.6"
 ahash = "0.8.7"
 byteorder = "1.5.0"
 toml = "0.8.8"
