--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,7 @@ openraft = { git = "https://github.com/databendlabs/openraft.git", features = [
 ] }
 validator = { version = "0.18", features = ["derive"] }
 rand = "0.8.5"
+opendal = { version = "0.51", features = ["services-s3"] }
 #format
 prettytable-rs = "^0.10"
 
