--- a/src/storage-adapter/Cargo.toml
+++ b/src/storage-adapter/Cargo.toml
@@ -37,3 +37,4 @@ metadata-struct.workspace = true
 rocksdb-engine.workspace = true
 journal-client.workspace = true
 futures.workspace = true
+opendal.workspace = true
