--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -43,3 +43,4 @@ mysql.workspace = true
 clap.workspace = true
 regex.workspace = true
 opendal.workspace = true
+prometheus-client.workspace = true
