--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ license = "Apache-2.0"
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
-tokio-rustls = "0.26"
+tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
 ## web lib
 axum = { version = "0.7.2", features = ["ws"] }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
