--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -52,7 +52,7 @@ runtime_worker_threads = 128
 default_user = "admin"
 default_password = "pwd123"
 
-[offline.messages]
+[offline_messages]
 enable = true
 expire_ms = 3600
 max_messages_num = 1000
