--- a/example/mqtt-cluster/placement-center/node-1.toml
+++ b/example/mqtt-cluster/placement-center/node-1.toml
@@ -36,5 +36,5 @@ data_path = "./robust-data-test/placement-center-1/data"
 max_open_files = 10000
 
 [log]
-log_config = "./config/log4rs.yaml"
+log_config = "./config/log-config/place-log4rs.yaml"
 log_path = "./robust-data-test/placement-center-1/logs"
