--- a/example/mqtt-cluster/mqtt-server/node-1.toml
+++ b/example/mqtt-cluster/mqtt-server/node-1.toml
@@ -58,3 +58,8 @@ storage_type = "memory"
 [log]
 log_config = "./config/log-config/mqtt-log4rs.yaml"
 log_path = "./robust-data-test/mqtt-broker-1/logs"
+
+[telemetry]
+enable = false
+exporter_type = "otlp"
+exporter_endpoint = "grpc://127.0.0.1:4317"
